tests/architecture/fixtures/valid/inward-layers.ts
import type { LegacyOrdersRepository } from "@nexoraxs/contracts";
export type Port = LegacyOrdersRepository;
