tests/architecture/fixtures/invalid/layer-boundaries/repository-provider.ts
export { AppProvider } from "apps/commerce/lib/store/AppProvider";
